clusters/homelab/apps/hello-public/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-public
  labels:
    expose-public: "true"
