clusters/homelab/apps/hello-public/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello-public
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: http
